--- a/Tribute Page/index.html
+++ b/Tribute Page/index.html
@@ -19,13 +19,66 @@
         <div id="img-caption">
           Gandhiji with his followers on the March to Dandi in March 12, 1930
         </div>
-        <p id="tribute-info">My life is my message</p>
-        <a
-          id="tribute-link"
-          href="https://en.wikipedia.org/wiki/Salt_March#March_to_Dandi"
-          target="_blank"
-        ></a>
+        <p id="tribute-info"><strong>Gandhi's Life:</strong></p>
+        
+        
       </div>
+      <ul>
+        <li><strong>1883:</strong>Gandhi and Kasturbai are married.</li>
+        <li>
+          <strong>1885:</strong>Death of Karamchand Gandhi, Gandhi's father
+        </li>
+        <li>
+          <strong>September 4, 1888</strong>Gandhi leaves for England to study
+          law.
+        </li>
+        <li>
+          <strong>June 10, 1891</strong>Gandhi passes the bar exam in England.
+        </li>
+        <li>
+          <strong>1891-1893:</strong> Gandhi fails as a lawyer in India.
+        </li>
+        <li>
+          <strong>April 1893:</strong>Gandhi accepts commission to spend a year
+          in South Africa advising on a lawsuit.
+        </li>
+        <li>
+          <strong>1894:</strong>Gandhi elects to stay on South Africa, and
+          founds the Natal Indian Congress.
+        </li>
+        <li>
+          <strong>1896:</strong>Gandhi returns to India to collect his wife and
+          children.
+        </li>
+        <li>
+          <strong>1896:</strong>Gandhi returns to South Africa with his family.
+        </li>
+        <li>
+          <strong>October 1899:</strong>Outbreak of Boer War (1899-1901) in
+          South Africa. Gandhi organizes an ambulance corps for the British.
+        </li>
+        <li>
+          <strong>1901:</strong>Gandhi returns to India to attend the Indian
+          National Congress. G.K. Gokhale introduces him to nationalist leaders.
+        </li>
+        <li>
+          <strong>1901-1906:</strong>Gandhi struggles toward Brahmacharya, or
+          celibacy, finally ending his sexual activity in 1906.
+        </li>
+        <li>
+          <strong>1904:</strong>Nationalists found the magazine the Indian
+          Opinion, and soon print it on Gandhi's farm, the "Phoenix Settlement."
+        </li>
+        <li>
+          <strong>January 30, 1948:</strong>Gandhi is assassinated by Nathuram
+          Vinayuk Godse, a Hindu nationalist.
+        </li>
+        </ul>
+      </div>
+      <h3>If you have time, you should read more about this incredible human being on his<a
+          id="tribute-link"
+          href="https://www.sparknotes.com/biography/gandhi/timeline/"
+          target="_blank">Wikipedia entry</a>
     </main>
   </body>
 </html>
